yaml/alpinepod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-pod
spec:
  containers:
    - name: alpine-container
      image: alpine
      command: ["bin/sh"]
      args:
        - "-c"
        - |
          echo 'hello world'
          echo "my Mode is $APP_MODE"
          echo 'going to sleep'
          sleep 3600
