yaml/initpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-init-container
spec:
  containers:
    - name: app-container
      image: busybox
      command: ["sh", "-c", "echo 'The app is ready for use'; sleep infinity"]
