yaml/nginxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: task1
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
