yaml/secret_test.yaml
apiVersion: v1 
kind: Pod       
metadata:
  name: secret-file-demo  

spec:
  containers:  
  - name: app  
    image: busybox  
    command:
      - "/bin/sh"  
      - "-c"  # Indicates that the following command should be executed by the shell
      - "cat /etc/secret-volume/api-key; sleep 3600"
        

    volumeMounts:  
    - name: secret-volume  
      mountPath: "/etc/secret-volume"  
      readOnly: true 

  volumes:  
  - name: secret-volume  
    secret:
      secretName: api-secret
