yaml/nginx-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-clusterip
spec:
  type: ClusterIP
  selector:
    run: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
