yaml/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-nodeport
spec:
  type: NodePort
  selector:
    run: http-server
  ports:
    - protocol: TCP
      port: 80        # Service port
      targetPort: 5678 # Container listens on 5678 by default in hashicorp/http-echo
      nodePort: 30080 # Exposes service on <NodeIP>:30080
